--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,9 +3,15 @@ $blackishgray: #292D32;
 $darkgray: #626C76;
 $mediumgray: #4D545A;
 $lightgray: #828F9A;
+$textgray: #8F9CA7;
+$weekdaygray: #C8C9CC;
+$daygray: #AAACAF;
 $whitishgray: #F5F7FA;
+$btngray: #f7f8fb;
 $divider: #E3EAF3;  
 $white: #FFFFFF;
 $successgreen: #53D56C;
+$darkergreen: #4FBF65;
 $closebtn: #ADBFC7;
 $purple: #6C70DC;
+$infoorange: #F4BE6C;
