--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,10 @@ main {
        column-gap: 12px;
   counter-increment: pinpoint-counter;
 }
-.progress .pinpoint.success::before {
+.progress .pinpoint.current::before {
   background-color: #53D56C;
 }
-.progress .pinpoint.success .pinpoint-label {
+.progress .pinpoint.current .pinpoint-label {
   color: #53D56C;
 }
 .progress .pinpoint.done::before {
@@ -100,6 +100,7 @@ main {
   -moz-column-gap: 22px;
        column-gap: 22px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 .content-main .option.selected {
   border: 2px solid #53D56C;
@@ -292,6 +293,7 @@ main {
   -moz-column-gap: 10px;
        column-gap: 10px;
   grid-column: 1/2;
+  visibility: hidden;
 }
 .content-bottom .info-img {
   width: 20px;
@@ -324,6 +326,7 @@ main {
 .content-bottom .right {
   display: flex;
   justify-content: end;
+  align-items: center;
 }
 .content-bottom .next {
   display: inline-block;
