--- a/scss/main.scss
+++ b/scss/main.scss
@@ -375,6 +375,7 @@ main {
                 font-weight: 600;
                 line-height: 18px;
                 color: $white;
+                text-transform: uppercase;
             }
 
             @keyframes appear {
