--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,90 @@ main {
   min-height: 100vh;
 }
 
+.notificationContainer {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.2);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+}
+@keyframes notificationBackgroundOn {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes notificationBackgroundOff {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.notificationContainer .notification {
+  width: 500px;
+  padding: 21px 23px 40px 23px;
+  border-radius: 8px;
+  background-color: #FFFFFF;
+  display: grid;
+  grid-template-rows: auto auto;
+  row-gap: 40px;
+  visibility: hidden;
+  position: relative;
+  opacity: 0;
+}
+@keyframes notificatonAppear {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+    top: -40px;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+}
+@keyframes notificatonDisappear {
+  0% {
+    opacity: 1;
+    visibility: visible;
+    top: 0px;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+    top: -40px;
+  }
+}
+.notificationContainer .notification .notificationCloseBtn {
+  width: 24px;
+  height: 24px;
+  justify-self: end;
+  cursor: pointer;
+}
+.notificationContainer .notification .notificationCloseBtn img {
+  width: 11px;
+}
+.notificationContainer .notification .notificationText {
+  justify-self: center;
+  color: #F39C12;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+}
+
 .reservation-container {
   display: grid;
   grid-template-columns: 230px 750px;
@@ -49,6 +133,9 @@ main {
 }
 .progress .pinpoint.done {
   cursor: pointer;
+}
+.progress .pinpoint.done .pinpoint-label {
+  color: #FFFFFF;
 }
 .progress .pinpoint.done::before {
   content: url("./../images/okay.svg");
@@ -295,6 +382,60 @@ main {
   background-color: #53D56C;
   color: #FFFFFF;
 }
+.content-main .confirmation {
+  display: none;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  row-gap: 25px;
+  opacity: 0;
+  animation: contentAppear 1.3s forwards;
+}
+.content-main .confirmation .formItem label {
+  font-size: 14px;
+  line-height: 21px;
+  margin-bottom: 10px;
+  color: #292D32;
+}
+.content-main .confirmation .formItem label span {
+  color: #EF264D;
+}
+.content-main .confirmation .formItem .formInput {
+  width: 100%;
+  border: 1px solid #E3EAF3;
+  background-color: #FFFFFF;
+  outline: none;
+  padding: 13px 10px;
+  font-size: 16px;
+  border-radius: 2px;
+}
+.content-main .confirmation .formItem:last-child {
+  grid-column: 1/3;
+}
+.content-main .confirmation .formItem .noteBox {
+  background-color: #FFFFFF;
+  padding: 19px 0 13px 26px;
+  border: 1px solid #E3EAF3;
+  border-radius: 2px;
+  font-size: 14px;
+  line-height: 21px;
+  display: grid;
+  row-gap: 8px;
+}
+.content-main .confirmation .formItem .noteBox .noteItem {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 12px;
+       column-gap: 12px;
+}
+.content-main .confirmation .formItem .noteBox .noteItem-label {
+  color: #6C70DC;
+}
+.content-main .confirmation .formItem .noteBox .noteItem-value-price {
+  font-weight: 500;
+  color: #4FBF65;
+}
 .content-bottom {
   border-top: 1px solid #E3EAF3;
   display: grid;
@@ -307,6 +448,12 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.content-bottom .left.noBack {
+  justify-content: end;
+}
+.content-bottom .left.noBack .back {
+  display: none;
 }
 .content-bottom .info {
   padding: 9px 14px;
@@ -361,6 +508,7 @@ main {
   cursor: pointer;
   padding: 9px 14px;
   border-radius: 2px;
+  text-transform: capitalize;
 }
 .content-bottom .back {
   color: #8F9CA7;
