--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,102 @@ main {
     min-height: 100vh;
 }
 
+.notificationContainer {
+    position: absolute;
+    inset: 0;
+    background: rgb(0, 0, 0, .2);
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+
+    @keyframes notificationBackgroundOn {
+        0% {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        100% {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    @keyframes notificationBackgroundOff {
+        0% {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        100% {
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+    .notification {
+        width: 500px;
+        padding: 21px 23px 40px 23px;
+        border-radius: 8px;
+        background-color: $white;
+        display: grid;
+        grid-template-rows: auto auto;
+        row-gap: 40px;
+        visibility: hidden;
+        position: relative;
+        opacity: 0;
+
+        @keyframes notificatonAppear {
+            0% {
+                opacity: 0;
+                visibility: hidden;
+                top: -40px
+            }
+    
+            100% {
+                opacity: 1;
+                visibility: visible;
+                top: 0;
+            }
+        }
+    
+        @keyframes notificatonDisappear {
+            0% {
+                opacity: 1;
+                visibility: visible;
+                top: 0px
+            }
+    
+            100% {
+                opacity: 0;
+                visibility: hidden;
+                top: -40px;
+            }
+        }
+
+        .notificationCloseBtn {
+            width: 24px;
+            height: 24px;
+            justify-self: end;
+            cursor: pointer;
+
+            img {
+                width: 11px;
+            }
+        }
+
+        .notificationText {
+            justify-self: center;
+            color: #F39C12;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 27px;
+        }
+    }
+}
+
 .reservation-container {
     display: grid;
     grid-template-columns: 230px 750px;
@@ -53,6 +149,9 @@ main {
 
         &.done {
             cursor: pointer;
+            .pinpoint-label {
+                color: $white;
+            }
         }
 
         &.done::before {
@@ -333,6 +432,68 @@ main {
                 }
             }
         }
+
+        .confirmation {
+            display: none;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto auto;
+            column-gap: 20px;
+            row-gap: 25px;
+            opacity: 0;
+            animation: contentAppear 1.3s forwards;
+
+            .formItem {
+                label  {
+                    font-size: 14px;
+                    line-height: 21px;
+                    margin-bottom: 10px;
+                    color: $blackishgray;
+
+                    span {
+                        color: #EF264D;
+                    }
+                }
+                .formInput {
+                    width: 100%;
+                    border: 1px solid $divider;
+                    background-color: $white;
+                    outline: none;
+                    padding: 13px 10px;
+                    font-size: 16px;
+                    border-radius: 2px;
+                }
+
+                &:last-child {
+                    grid-column: 1 / 3;
+                }
+
+                .noteBox {
+                    background-color: $white;
+                    padding: 19px 0 13px 26px;
+                    border: 1px solid $divider;
+                    border-radius: 2px;
+                    font-size: 14px;
+                    line-height: 21px;
+                    display: grid;
+                    row-gap: 8px;
+
+                    .noteItem {
+                        display: flex;
+                        align-items: center;
+                        column-gap: 12px;
+
+                        &-label {
+                            color: $purple;
+                        }
+
+                        &-value-price {
+                            font-weight: 500;
+                            color: $darkergreen;
+                        }
+                    }
+                }
+            }
+        }
     }
 
     &-bottom {
@@ -347,6 +508,13 @@ main {
             display: flex;
             align-items: center;
             justify-content: space-between;
+
+            &.noBack {
+                .back {
+                    display: none;
+                }
+                justify-content: end;
+            }
         }
 
         .info {
@@ -404,6 +572,7 @@ main {
             cursor: pointer;
             padding: 9px 14px;
             border-radius: 2px;
+            text-transform: capitalize;
         }
 
         .back {
